--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@
 body {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 main {
